--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Theme support for CSS modules in React Native environment",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf dist && tsc -p .",
     "test": "jest"
   },
   "keywords": [
@@ -18,6 +18,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "23.1.1",
+    "@types/react-native": "0.55.22",
     "jest": "23.1.0",
     "react-native": "0.55.4",
     "ts-jest": "22.4.6",
