--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,14 @@
     "module": "commonjs",
     "declaration": true,
     "outDir": "./dist",
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true
   },
+  "include": [
+      "src/**/*"
+  ],
   "exclude": [
+    "dist",
     "node_modules"
   ]
 }
